Fix PostCSS config for Railway deployment and update build scripts

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,12 +1,15 @@
 # Backend configuration
-PORT=5000
+PORT=5001
 NODE_ENV=development
 
-# JWT Secret - Change this in production!
+# JWT Secret - REQUIRED! Generate a secure random string for production
+# On Railway: Set this in the environment variables
 JWT_SECRET=your-super-secret-key-change-in-production
 
 # Frontend URL for CORS
+# On Railway: Set this to your deployed frontend URL
 FRONTEND_URL=http://localhost:3000
 
 # Database path (SQLite)
+# Railway will automatically provide persistent storage
 # DB_PATH=./data/traderfm.db 
