Add Twitter OAuth integration

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,6 +10,16 @@ JWT_SECRET=your-super-secret-key-change-in-production
 # On Railway: Set this to your deployed frontend URL
 FRONTEND_URL=http://localhost:3000
 
+# Base URL for callback generation
+# On Railway: Set this to your deployed backend URL
+BASE_URL=http://localhost:5001
+
+# Twitter OAuth - Get these from developer.twitter.com
+# IMPORTANT: Regenerate these keys immediately if compromised!
+TWITTER_API_KEY=your-twitter-api-key
+TWITTER_API_SECRET=your-twitter-api-secret
+TWITTER_CALLBACK_URL=http://localhost:5001/api/auth/twitter/callback
+
 # Database path (SQLite)
 # Railway will automatically provide persistent storage
 # DB_PATH=./data/traderfm.db 
