--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,19 @@
     "db:init": "node src/utils/initDb.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bad-words": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
-    "helmet": "^7.0.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
-    "bad-words": "^3.0.4",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-twitter-oauth2": "^2.1.1",
+    "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -27,4 +30,4 @@
   "engines": {
     "node": ">=14.0.0"
   }
-} 
+}
