Fix Railway proxy trust and switch to Twitter OAuth 1.0a for stability

--- a/backend/env.example
+++ b/backend/env.example
@@ -15,9 +15,10 @@ FRONTEND_URL=http://localhost:3000
 BASE_URL=http://localhost:5001
 
 # Twitter OAuth - Get these from developer.twitter.com
-# IMPORTANT: Regenerate these keys immediately if compromised!
-TWITTER_API_KEY=your-twitter-api-key
-TWITTER_API_SECRET=your-twitter-api-secret
+# IMPORTANT: Use Consumer Key and Consumer Secret from your Twitter app
+# Note: Twitter uses OAuth 1.0a
+TWITTER_API_KEY=your-twitter-consumer-key
+TWITTER_API_SECRET=your-twitter-consumer-secret
 TWITTER_CALLBACK_URL=http://localhost:5001/api/auth/twitter/callback
 
 # Database path (SQLite)
