--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
+    "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
