--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,28 @@
 {
   "name": "traderfm-backend",
   "version": "1.0.0",
-  "description": "Backend for TraderFM Q&A platform",
+  "description": "Backend API for TraderFM",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "init-db": "node src/utils/initDb.js",
-    "backup": "node src/utils/backup.js backup",
-    "backup:list": "node src/utils/backup.js list",
-    "backup:restore": "node src/utils/backup.js restore"
+    "db:init": "node src/utils/initDb.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^7.1.0",
-    "express-validator": "^7.0.1",
+    "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-twitter": "^1.0.4",
-    "express-session": "^1.17.3"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
