--- a/backend/env.example
+++ b/backend/env.example
@@ -21,6 +21,11 @@ TWITTER_API_KEY=your-twitter-consumer-key
 TWITTER_API_SECRET=your-twitter-consumer-secret
 TWITTER_CALLBACK_URL=http://localhost:5001/api/auth/twitter/callback
 
+# Telegram Bot Configuration (Optional - for notifications)
+# Create a bot via @BotFather on Telegram
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_BOT_USERNAME=your_bot_username
+
 # Database path (SQLite)
 # Railway will automatically provide persistent storage
 # DB_PATH=./data/traderfm.db 
