--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "db:init": "node src/utils/initDb.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
